--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
         </div>
 
         <div class="copyright">
-            <p>Site Design Template &copy 2022 zeusscript Inc.</p>
+            <p>Dummy Ecommerce Homepage &copy 2022 zeusscript Inc.</p>
         </div>
     </footer>
     <!-- END -->
